add link to documentation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,8 @@
 
       <div class="jumbotron">
         <h1>This is only an API endpoint</h1>
-        <p class="lead">There is nothing to see here</p>
+        <p class="lead">There is nothing to see here.</p>
+        <p class="lead">But there is <a href="//dmathieu.github.io/polycloud-docs">a documentation</a>.</p>
       </div>
     </div>
   </body>
